# siva

./: .gitignore  README.md  README_Clinical_Pearls.md  clinical_pearls_demo.py  dashboard.html  data_manager.py  debug_conversation.py  gradio_frontend.py  learning_demo.py  llm_judge.py  main.py  main_tau2.py  patient_intake_demo.py  pyproject.toml  requirements.txt  run_demos.py  run_voice_app.py  serve_client.py  test_unified_infrastructure.py  unified_demo.py  vector_store.py  voice_client.html
.cursor/: .cursorrules  README.md  settings.json
api/: __init__.py  embedding_viz.py  routes.py  websockets.py
applications/clinical_pearls/: __init__.py  clinical_pearls_app.py
applications/patient_intake/: __init__.py  patient_intake_app.py
config/: __init__.py  settings.py
core/: __init__.py  data_manager.py  llm_judge.py  processor.py  schemas.py  vector_store.py
data/simulations/: 2025-08-23T18:37:07.886301_patient_intake_llm_agent_solo_gpt-4.1_dummy_user_gpt-4.1.json  2025-08-27T10:49:12.309929_patient_intake_llm_agent_solo_gpt-4.1_dummy_user_gpt-4.1.json  (+48 more)
examples/: framework_demo.py  simple_framework_demo.py
framework/: __init__.py  config.py  domain_knowledge_adapter.py  dual_purpose_vector_store.py  learning_pipeline.py  voice_interface.py
frontend/: __init__.py  dashboard.html  voice_client.html
frontend/nextjs/: README.md  package-lock.json  (+3 more)
old/: gradio_frontend.py
ref/: bot.py  server.py
scripts/: start_tau2_server.sh
tests/: README.md  __init__.py  conftest.py  run_learning_tests.py  test_api_migration.py  test_config_migration.py
(+70 files in other folders)
