[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siva"
version = "0.1.0"
description = "Self-Learning Voice Agent for Healthcare Intake"
authors = [
    {name = "SIVA Team", email = "team@siva.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "fastapi[all]",
    "uvicorn",
    "cartesia",
    "openai",
    "sounddevice",
    "numpy",
    "scikit-learn",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/siva-team/siva"
Repository = "https://github.com/siva-team/siva"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "config*", "core*", "frontend*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true